#    Copyright 2025 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
#    Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file except in compliance with the License. A copy of the License is located at
#
#        http://aws.amazon.com/apache2.0/
#
#    or in the "license" file accompanying this file. This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
[project]
name = "rdklib"
version = "0.3.9"
requires-python = ">=3.10,<4.0.0"

[tool.poetry]
name = "rdklib"
version = "0.3.9"
description = "Rule Development Kit Library for AWS Config"
authors = [
    "AWS RDK Maintainers <rdk-maintainers@amazon.com>",
]
repository = "https://github.com/awslabs/aws-config-rdklib"
homepage = "https://github.com/awslabs/aws-config-rdklib"
readme = "README.md"
packages = [{include = "rdklib"}, {include = "rdklibtest"}]
keywords = ["amazon", "aws", "awslabs", "rdk", "rdklib", "layer", "lambda", "config", "rules", "compliance"]
documentation = "https://aws-config-rdklib.readthedocs.io"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = [
    "README.md",
    "NOTICE.txt",
    "LICENSE",
]
exclude = [
    "rdklib/util/internal.py"
]
license = "Apache-2.0"

[tool.bandit]
exclude_dirs = ["tst"]

# Styling and linting Configurations
[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 120

[tool.poe.tasks]
isort = "isort --profile=black ."
black = "black ."
check-black = {cmd = "black . --check --diff", help = "Check code for black styling"}
check-isort = {cmd = "isort --check --profile=black .", help = "Check code for import styling"}
check-docstrings = "pydocstyle -e ."
check-ruff = "ruff check rdklib"
check = ["check-isort", "check-black"]
lint = ["check-docstrings", "check-ruff"]
fix = ["isort", "black"]
# test = "pytest --cov=rdklib --cov-report=xml --cov-report=term"
ruff = "ruff check --fix rdk"
safety = "safety check"
bandit = "bandit -r rdklib"
security = ["safety", "bandit"]
update-doc-deps = {cmd = "poetry export --only=docs -f requirements.txt > docs/requirements.txt", help = "Generate an updated requirements.txt for docs" }
serve-docs = {cmd = "mkdocs serve"}
# requires poethepoet outside of poetry.
install = "poetry install"
build = "poetry build"

[tool.poetry.dependencies]
authlib      = "^1.6.9"
bandit       = "^1.7.7"
boto3        = "^1.35"
cryptography = "^46.0"
filelock     = "^3.25"
idna         = "^3.7"
pyyaml       = "^6"
rdk          = "^0.17"
regex        = "^2025.2"
requests     = "^2.32"
urllib3      = "^2.6"


[tool.poetry.group.dev.dependencies]
black      = "^25.1"
debugpy    = "^1.6.7"
isort      = {extras = ["toml"], version = "^5.11.4"}
jinja2     = "^3.1.6"
mypy       = "^1.16.1"
pydocstyle = "^6.3"
pytest     = "^7.0"
ruff       = "^0.12.3"
setuptools = "^78.1.1"

[tool.poetry.group.security.dependencies]
bandit = "^1.8.3"
safety = "^3.6.0"

[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0.12.10"
boto3-stubs = {extras = ["cloudformation", "config", "iam", "s3", "sts"], version = "^1.26.139"}


[tool.poetry.group.docs.dependencies]
markdown-include    = "^0.8.1"
mkdocs              = "^1.6.1"
mkdocs-material     = "^9.7.3"
mkdocstrings-python = "^1.18.2"
pymdown-extensions  = "^10.21.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
